@@ -1,3 +1,11 @@
+2004-04-23  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* mail-account-gui.c (mail_account_gui_source_complete): Added a 
+	check for HAS_LICENSE flag.
+	(mail_account_gui_check_for_license)(display_license)
+	(populate_text_entry)(check_button_state)(set_license_accepted)
+	(set_license_rejected): Implemented
+
 2004-04-22  Not Zed  <NotZed@Ximian.com>
 
 	* em-migrate.c (em_migrate_imap_cmeta_1_4): do the imap cmeta
